Added icons to buttons

--- a/EconomyApplication/src/main/resources/StyleSheet.css
+++ b/EconomyApplication/src/main/resources/StyleSheet.css
@@ -1,5 +1,5 @@
 .menu-bar {
-    -fx-background-color: black ;
+    -fx-background-color: white ;
     -fx-opacity: 0.5;
     -fx-border-width: 2.0;
 }
