--- a/EconomyApplication/src/main/resources/StyleSheet.css
+++ b/EconomyApplication/src/main/resources/StyleSheet.css
@@ -64,9 +64,15 @@
 
 Text {
     -fx-font-family: 'Helvetica Neue';
-    -fx-font-weight: bold;
+    -fx-font-weight: 700;
 }
 
 .accountComboBox {
     -fx-alignment: left;
+}
+.table-cell {
+    -fx-font-family: "Helvetica Neue";
+    -fx-font-size: 16px;
+    -fx-font-weight: 800;
+    -fx-alignment: center;
 }
